--- a/CourseProject.csproj
+++ b/CourseProject.csproj
@@ -17,4 +17,8 @@
     <PackageReference Include="Microsoft.Extensions.Localization" Version="8.0.11" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Template\" />
+  </ItemGroup>
+
 </Project>
