--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=CourseProject;Trusted_Connection=True;"
+    //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=CourseProject;Trusted_Connection=True;"
+    "DefaultConnection": "Server=localhost;Database=CourseProject;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true;"
   }
 }
