Added Image to Details

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=CourseProject;Trusted_Connection=True;"
+    //"DefaultConnection": "workstation id=CourseProject.mssql.somee.com;packet size=4096;user id=victor000_SQLLogin_1;pwd=5l7aex9o2y;data source=CourseProject.mssql.somee.com;persist security info=False;initial catalog=CourseProject;TrustServerCertificate=True;"
     "DefaultConnection": "Server=localhost;Database=CourseProject;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true;"
   }
 }
