--- a/CourseProject.csproj
+++ b/CourseProject.csproj
@@ -17,6 +17,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Localization" Version="8.0.11" />
     <PackageReference Include="NReco.PdfGenerator" Version="1.2.1" />
+    <PackageReference Include="xmlrpcnet" Version="2.5.0" />
   </ItemGroup>
 
 </Project>
